# tech-today-sales-backend

./: README.md  base.html  config.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
admin/: admin.py
admin/static/js/: index.js
admin/templates/: addUser.html  create_admin.html  listuser.html  login.html  user.html
client_data/: client_info.py
client_data/static/css/: styles.css
client_data/static/js/: index.js
client_data/templates/: client.html  results.html
engine/: database.py
migrations/versions/: bd9e97941cde_changed_industry_category_column_in_.py
models/: adminModel.py  buildingModel.py  client.py  clientModel.py  clientOfficeModel.py  internet.py  internetModel.py  meeting.py  meetingModel.py  office.py  officeModel.py  user.py
sales_location/: sales_location.py
sales_location/static/css/: locations.css  styles.css
sales_location/templates/: lists.html  sales_location.html
static/: styles.css
static/css/: output.css  styles.css
templates/: admin.html  base.html  client.html  login.html  user.html
views/: client_info.py  forms.py  sales_location.py
