[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "blinker==1.9.0",
    "bootstrap-flask==2.5.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-hashing==1.1",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.2.2",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "psycopg2==2.9.10",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
